# solenoid

./: .gitignore  README.md  pyproject.toml
eureka/client/: actuator.py  api.py  config.py  flask.py
eureka/client/actuators/: health.py  info.py  runtime.py
solenoid/: app.py  config.py  eureka.py  solenoid.py
solenoid/solenoids/: log.py  runtime.py
tests/: logging.yaml  service.yaml  test_client.py  test_eureka_flask.py  test_solenoid.py
